crates/aihu-css-core/tests/snapshots/apply__apply_inside_nested_rule.snap
---
source: crates/aihu-css-core/tests/apply.rs
assertion_line: 91
expression: css
---
.card {
  display: grid;
  & .title {
    font-weight: 500;
  }
}
