crates/aihu-css-core/tests/snapshots/apply__arbitrary_value_utility_in_apply.snap
---
source: crates/aihu-css-core/tests/apply.rs
assertion_line: 103
expression: css
---
.swatch {
  background-color: #fff;
}
