crates/aihu-css-core/tests/snapshots/apply__base_utility_inlines_declarations.snap
---
source: crates/aihu-css-core/tests/apply.rs
assertion_line: 39
expression: css
---
.btn {
  display: inline-flex;
  align-items: center;
}
