crates/aihu-css-core/tests/snapshots/apply__dark_variant_cascade_in_apply.snap
---
source: crates/aihu-css-core/tests/apply.rs
assertion_line: 143
expression: css
---
.panel {
  :host([data-theme="dark"]) &, :root.dark &, :root[data-theme="dark"] & {
    background-color: var(--color-surface);
  }
}
