crates/aihu-css-core/tests/snapshots/apply__data_attribute_variant.snap
---
source: crates/aihu-css-core/tests/apply.rs
assertion_line: 131
expression: css
---
.btn {
  &[data-state="open"] {
    background-color: var(--color-accent);
  }
}
