crates/aihu-css-core/tests/snapshots/apply__multi_token_apply.snap
---
source: crates/aihu-css-core/tests/apply.rs
assertion_line: 66
expression: css
---
.btn {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  border-radius: 0.375rem;
}
