crates/aihu-css-core/tests/snapshots/apply__responsive_variant_wraps_media.snap
---
source: crates/aihu-css-core/tests/apply.rs
assertion_line: 120
expression: css
---
.grid {
  @media (min-width: 48rem) {
    & {
      display: flex;
    }
  }
}
